# fileSystem

./: .gitignore  CMakeLists.txt  README.md  script1  script2
include/filesystem/: file.h
src/: client.cpp  disk.cpp  disk.h  file.cpp  main.cpp  server.cpp
